Changes Sound Animation + Fix Block Hover z-index issue

--- a/_lib/css/style.css
+++ b/_lib/css/style.css
@@ -1587,7 +1587,7 @@ header {
   width: 100vw;
   height: 100vh;
   display: block;
-  z-index: -1;
+  z-index: -10000;
 }
 .block-hover.active {
   z-index: 9999999;
@@ -2614,26 +2614,86 @@ footer ul li span {
 .volume {
   align-self: center;
   cursor: pointer;
-  top: 8px;
-  left: 11px;
+  top: 20px;
+  left: 20px;
   position: absolute;
   z-index: 1000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .volume:hover {
-  transform: scale(1.1);
+  transform: scale(1.05);
 }
 .volume svg {
-  width: 16px;
-  height: 16px;
+  width: 35px;
+  height: 35px;
+  fill: #ea002a;
 }
 .volume path {
   transition: all 300ms ease-in-out;
+}
+.volume .sound-text {
+  font-family: "Gotham", sans-serif;
+  font-size: 9px;
+  font-weight: bold;
+  letter-spacing: 0.2em;
+  color: #ea002a;
+  text-transform: uppercase;
+  display: block;
+  width: max-content;
+  top: 10px;
+  left: 45px;
+  position: absolute;
+  transition: color 0.4s ease-in-out;
 }
 .volume .sound-on {
   opacity: 1;
 }
 .volume .sound-off {
   opacity: 0;
+}
+.volume:not(.volume--muted) #Line_1 {
+  animation: pulse 1s infinite;
+  animation-delay: 0.15s;
+}
+.volume:not(.volume--muted) #Line_2 {
+  animation: pulse 1s infinite;
+  animation-delay: 0.3s;
+}
+.volume:not(.volume--muted) #Line_3 {
+  animation: pulse 1s infinite;
+  animation-delay: 0.45s;
+}
+.volume:not(.volume--muted) #Line_4 {
+  animation: pulse 1s infinite;
+  animation-delay: 0.6s;
+}
+.volume:not(.volume--muted) #Line_5 {
+  animation: pulse 1s infinite;
+  animation-delay: 0.75s;
+}
+.volume:not(.volume--muted) #Line_6 {
+  animation: pulse 1s infinite;
+  animation-delay: 0.9s;
+}
+.volume:not(.volume--muted) #Line_7 {
+  animation: pulse 1s infinite;
+  animation-delay: 1.05s;
+}
+.volume:not(.volume--muted) #Line_8 {
+  animation: pulse 1s infinite;
+  animation-delay: 1.2s;
+}
+.volume:not(.volume--muted) #Line_9 {
+  animation: pulse 1s infinite;
+  animation-delay: 1.35s;
+}
+.volume--muted svg {
+  fill: #000000;
+}
+.volume--muted .sound-text {
+  color: #000000;
 }
 .volume--muted .sound-on {
   opacity: 0;
@@ -2642,6 +2702,20 @@ footer ul li span {
   opacity: 1;
 }
 
+@keyframes pulse {
+  0% {
+    transform: scaleY(1);
+    transform-origin: 50% 50%;
+  }
+  50% {
+    transform: scaleY(0.7);
+    transform-origin: 50% 50%;
+  }
+  100% {
+    transform: scaleY(1);
+    transform-origin: 50% 50%;
+  }
+}
 .section {
   width: 100vw;
   height: 100vh;
