--- a/_src/scss/layout/_header.scss
+++ b/_src/scss/layout/_header.scss
@@ -15,7 +15,7 @@ header {
   @include fixed(top 0 left 0);
   @include size(100vw, 100vh);
   display: block;
-  z-index: -1;
+  z-index: -10000;
 
   &.active {
     z-index: 9999999;
